<resources>
    <string name="app_name">EasyCut</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="enter">enter</string>
    <string name="select_date">Select date:</string>
    <string name="enter_date">Enter Date</string>
    <string name="select_haircut">Select Haircut:</string>
    <string name="select_time">Select time:</string>
    <string name="schedule">schedule</string>
    <string name="title_activity_booking_approve">bookingApprove</string>
    <string name="your_appointment_has_been_approved">your appointment has been approved!</string>
    <string name="booking_confirmed">Booking confirmed!</string>
    <string name="my_appointment">My Appointments</string>
    <string name="home">home</string>

</resources>